[gd_scene load_steps=13 format=2]

[ext_resource path="res://City/cityLevel.png" type="Texture" id=1]
[ext_resource path="res://City/hobo.png" type="Texture" id=2]
[ext_resource path="res://Marsh/bogBackground1.png" type="Texture" id=3]
[ext_resource path="res://Marsh/bogBackground4.png" type="Texture" id=4]
[ext_resource path="res://Marsh/bogBackground2.png" type="Texture" id=5]
[ext_resource path="res://Marsh/bogBackground3.png" type="Texture" id=6]
[ext_resource path="res://City/Hobo.gd" type="Script" id=7]
[ext_resource path="res://Scripts/EncapsulatedParallax.gd" type="Script" id=8]
[ext_resource path="res://City/AttackTrigger.gd" type="Script" id=9]
[ext_resource path="res://City/garbageBags.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 326, 602 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -22, -8, 0, 0, 0, 0, 104, -10, 47.2414, 15.4756, -47.2414, -15.4756, 58, -206, 0, 0, 0, 0, -18, -198, -76.5636, 27.6932, 76.5636, -27.6932, 100, -338, 0, 0, 0, 0, 242, -304, -49.6849, 14.6611, 49.6849, -14.6611, 360, -464, 0, 0, 0, 0, 480, -436, 53.7574, 9.77407, -53.7574, -9.77407, 368, -624, 0, 0, 0, 0, 238, -596, 60.2735, 6.51605, -60.2735, -6.51605, 86, -754, 0, 0, 0, 0, -48, -722, -65.975, 6.51605, 65.975, -6.51605, 100, -904, 0, 0, 0, 0, 232, -888 )
}

[node name="Node2D" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 1607 )
transform = Transform2D( 1, 0, 0, 1, 0, 1607 )
script = ExtResource( 8 )

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, -1390 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer2"]
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 3000, 360 )

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.19, 0.19 )
motion_offset = Vector2( 0, -1242 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 3000, 360 )

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, -667 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 3000, 360 )

[node name="Level" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Hobo" type="Node2D" parent="."]
position = Vector2( -968, 1936 )
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Hobo"]

[node name="ChaseTrigger" type="Area2D" parent="Hobo"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hobo/ChaseTrigger"]
polygon = PoolVector2Array( 244, -244, 74, -312, -108, -312, -84, -1082, 474, -928, 514, -928, 522, -306 )

[node name="AttackTrigger" type="Area2D" parent="Hobo"]
visible = false
position = Vector2( 214, 0 )
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hobo/AttackTrigger"]
position = Vector2( 0, 564 )
shape = SubResource( 1 )

[node name="Path2D" type="Path2D" parent="Hobo"]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Hobo/Path2D"]
position = Vector2( -22, -8 )
rotate = false
loop = false

[node name="Sprite" type="Sprite" parent="Hobo/Path2D/PathFollow2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Garbage" type="Sprite" parent="."]
position = Vector2( -980, 1944 )
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 10 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -594, 1976, 392, 1976, 392, 2048, -594, 2048 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 1008, 2048, 1008, 1936, 1080, 1936, 1080, 1450, 1052, 1450, 1052, 1428, 1080, 1428, 1080, 160, 1052, 160, 1052, 138, 1080, 138, 1080, -38, 1052, -38, 1052, -60, 1080, -60, 1080, -2048, 2048, -2048, 2048, 2048 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -758, 2048, -758, 1976, -1034, 1976, -1034, 1820, -930, 1820, -930, 1786, -1034, 1786, -1034, 1284, -1006, 1284, -1006, 1262, -1034, 1262, -1034, 824, -1006, 824, -1006, 802, -1034, 802, -1034, 650, -952, 650, -952, 628, -982, 628, -982, 490, -862, 490, -862, 468, -892, 468, -892, 352, -892, 192, -618, 192, -618, 518, -578, 518, -578, 336, -548, 336, -548, 314, -578, 314, -578, 152, -1034, -304, -1034, -384, -1004, -384, -1004, -406, -1034, -406, -1034, -1000, -1004, -1000, -1004, -1022, -1034, -1022, -1034, -1560, -1004, -1560, -1004, -1582, -1034, -1582, -1034, -2048, -2048, -2048, -2048, 2048 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -494, 1550, -466, 1550, -466, 972, -494, 972, -494, 950, -466, 950, -466, 606, -496, 606, -496, 584, -466, 584, -466, 92, -496, 92, -496, 70, -466, 70, -466, -528, -496, -528, -496, -550, -466, -550, -466, -1556, -382, -1640, -344, -1640, -260, -1556, -260, -1314, -50, -1104, -260, -1104, -260, -154, -50, 56, -260, 56, -260, 918, -50, 1128, -260, 1128, -260, 1634, -466, 1634, -466, 1572, -494, 1572 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -744, 1678, -706, 1678, -706, 1698, -744, 1698 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -750, 1392, -712, 1392, -712, 1412, -750, 1412 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0, -46 )
polygon = PoolVector2Array( -752, 1144, -714, 1144, -714, 1164, -752, 1164 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -760, 724, -720, 724, -720, 658, -690, 658, -690, 636, -720, 636, -720, 282, -760, 282 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -630, -56, -610, -56, -610, -36, -630, -36 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -826, -256, -806, -256, -806, -236, -826, -236 )

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -654, -710, -634, -710, -634, -690, -654, -690 )

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -960, -806, -940, -806, -940, -786, -960, -786 )

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 64, -352 )
polygon = PoolVector2Array( -960, -806, -940, -806, -940, -786, -960, -786 )

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 210, -482 )
polygon = PoolVector2Array( -960, -806, -940, -806, -940, -786, -960, -786 )

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 62, -636 )
polygon = PoolVector2Array( -960, -806, -940, -806, -940, -786, -960, -786 )

[node name="CollisionPolygon2D16" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 200, -872 )
polygon = PoolVector2Array( -960, -806, -940, -806, -940, -786, -960, -786 )

[node name="CollisionPolygon2D17" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 318, 1438, 524, 1438, 524, 1114, 552, 1114, 552, 1092, 524, 1092, 524, 948, 552, 948, 552, 926, 524, 926, 524, 770, 928, 366, 956, 366, 956, 344, 928, 344, 928, 276, 524, -128, 524, -418, 552, -418, 552, -440, 524, -440, 526, -2048, 320, -2048, 318, -734, 108, -524, 318, -524, 318, 426, 108, 636, 318, 636 )

[node name="CollisionPolygon2D18" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 186, 1584, 656, 1584, 656, 1634, 186, 1634 )

[node name="CollisionPolygon2D19" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 814, 1206, 834, 1206, 834, 1226, 814, 1226 )

[node name="CollisionPolygon2D20" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 690, 728, 710, 728, 710, 748, 690, 748 )

[node name="CollisionPolygon2D21" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 862, 568, 882, 568, 882, 588, 862, 588 )

[node name="CollisionPolygon2D22" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 618, -148, 638, -148, 638, -128, 618, -128 )

[node name="CollisionPolygon2D23" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 720, -322, 740, -322, 740, -302, 720, -302 )

[node name="CollisionPolygon2D24" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 30, -84 )
polygon = PoolVector2Array( 968, -544, 988, -544, 988, -524, 968, -524 )
[connection signal="body_entered" from="Hobo/ChaseTrigger" to="Hobo" method="_on_ChaseTrigger_body_entered"]
[connection signal="body_exited" from="Hobo/ChaseTrigger" to="Hobo" method="_on_ChaseTrigger_body_exited"]
[connection signal="body_entered" from="Hobo/AttackTrigger" to="Hobo" method="_on_AttackTrigger_body_entered"]
